--- a/index.html
+++ b/index.html
@@ -169,10 +169,11 @@
   display: inline-block;
   padding: 5px;
   width: 200px;
+  height: 40px;
   text-align: center;
   white-space: nowrap;
   overflow: hidden;
-  font-size: 14px;
+  font-size: 20px;
   text-overflow: ellipsis;
   background-color: #55f;
   color: white;
