--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
       <a href="#" id="hikari" onclick="frame(this);"><img src="hikari.png" width="200" height="200"></a>
     </div>
     <p1>
-      <input type="button" style="width:40%; font-size:50px;" value="範囲限定" onclick="initialize1()">
-      <input type="button" style="width:40%; font-size:50px;" value="オープン" onclick="initialize2()">
+      <input type="button" id="btn1" style="width:40%; font-size:50px;" value="範囲限定" onclick="initialize1()">
+      <input type="button" id="btn2" style="width:40%; font-size:50px;" value="オープン" onclick="initialize2()">
       <div class="sample">
       <form id="target">
         <input type="radio" name="hoge" id="select1" value="アイコン" checked="">
