--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
 
     <div id="overlay2" onclick="off2()">
       <ul id="color" onclick="off2()">
-        <li1><a href="#" id="red" onclick="colorChange(this)">MENU1</a></li1>
-        <li2><a href="#" id="blue" onclick="colorChange(this)">MENU2</a></li2>
-        <li3><a href="#" id="green" onclick="colorChange(this)">MENU3</a></li3>
-        <li4><a href="#" id="black" onclick="colorChange(this)">MENU4</a></li4>
+        <li1><a href="#" id="red" onclick="colorChange(this)">赤</a></li1>
+        <li2><a href="#" id="blue" onclick="colorChange(this)">青</a></li2>
+        <li3><a href="#" id="green" onclick="colorChange(this)">緑</a></li3>
+        <li4><a href="#" id="black" onclick="colorChange(this)">黒</a></li4>
       </ul>
     </div>
     <div id="overlay3" onclick="off3()">
